chore: added more images

--- a/src/content/docs/docs/guides/implementation/assisted-self-managed-deployment-guide.mdx
+++ b/src/content/docs/docs/guides/implementation/assisted-self-managed-deployment-guide.mdx
@@ -7,7 +7,6 @@ sidebar:
 
 import {Aside, Steps, Tabs, TabItem} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../../components/ThemeImage.astro';
-import MermaidDiagram from '../../../../../components/MermaidDiagram.astro';
 
 This guide provides practical steps for implementing the Assisted Self-Managed deployment model, where customers maintain control of their infrastructure while allowing deployment agents to automate updates.
 
@@ -21,42 +20,10 @@ Before implementing this model, ensure you have:
 
 ## Solution Architecture
 
-<MermaidDiagram 
-  chart={`
-graph TD
-
-subgraph Vendor_Environment
-hub[Distr Hub]
-reg[Distr Registry]
-stor[PostgreSQL]
-hub --> reg
-stor --> hub
-end
-
-subgraph Customer_Environment
-customer[End Customer]
-dockerAgent[Docker Agent]
-helmAgent[Helm Agent]
-tfAgent[Terraform Agent]
-vmApp[App on VM]
-k8sApp[App on Kubernetes]
-infra[Terraform Infra]
-
-    hub --> dockerAgent
-    hub --> helmAgent
-    hub --> tfAgent
-
-    customer --> dockerAgent
-    customer --> helmAgent
-    customer --> tfAgent
-
-    dockerAgent --> vmApp
-    helmAgent --> k8sApp
-    tfAgent --> infra
-    reg --> tfAgent
-
-end
-`}
+<ThemeImage
+  lightSrc="/src/assets/docs/use-cases/assisted-self-managed/assisted-self-managed-light.png"
+  darkSrc="/src/assets/docs/use-cases/assisted-self-managed/assisted-self-managed-dark.png"
+  alt="Assisted-Self-Managed diagram"
 />
 
 ## Implementation Process
