--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -30,6 +30,10 @@ The Docker Compose agent is specifically designed for container-based deployment
   alt="Docker Compose Agent interface"
 />
 
+<Aside type="note">
+  Unless you're using Distr to deploy your own applications internally, the Distr agent will always be configured and deployed by the end customer. Head over to the [end-customer agent guide](/docs/guides/end-customer-registry-view/#deployment-agent-quickstart-from-the-customer-portal) to learn how it should be installed.
+</Aside>
+
 #### Configuration Steps
 
 1. Navigate to the Deployments panel in the Agents section
