--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -8,10 +8,9 @@ sidebar:
 import {Aside} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
+Distr is an open source software distribution platform built for multiple [deployment scenarios](/docs/use-cases/fully-self-managed/). It enables software and AI companies to distribute applications and artifacts to customer-controlled environments.
 
-Distr is an open source software distribution platform built for multiple deployment scenarios. It enables software and AI companies to distribute applications and artifacts to customer-controlled environments.
-
-Distr provides distribution tooling for self-managed, BYOC, air-gapped, and edge deployments while giving vendors visibility and control throughout the application lifecycle.
+Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-self-managed/), [BYOC](/docs/use-cases/byoc/), [air-gapped](docs/use-cases/air-gapped/), and [edge deployments](/docs/use-cases/edge-deployments/) while giving vendors visibility and control throughout the application lifecycle.
 
 ## Architecture
 
@@ -26,12 +25,12 @@ Distr provides distribution tooling for self-managed, BYOC, air-gapped, and edge
 | Feature | Description |
 | ------- | ----------- |
 | 🔄 **Multiple distribution models** | Distr supports fully self-managed, assisted self-managed, BYOC, air-gapped, and edge deployments to meet any customer requirement. |
-| 🛠️ **Works with existing tools** | Distr integrates with Docker, Helm, and all OCI-compliant tools as well as GitHub Actions  fitting easily into established workflows. |
-| 🔒 **Built for enterprise security** | Supports air-gapped environments, IP whitelisting, and token based private registry access |
+| 🛠️ **Works with existing tools** | Distr integrates with Docker, Helm, and all OCI-compliant tools as well as [GitHub Actions](http://localhost:4321/docs/integrations/gh-action/)  fitting easily into established workflows. |
+| 🔒 **Built for enterprise security** | Supports air-gapped environments and [token based](/docs/integrations/personal-access-token/) private registry access |
 | 📦 **Multiple package formats** | Distributes Docker Compose files, Helm charts and any OCI-compliant artifact. |
 | 🔍 **Complete visibility** | Centralized monitoring of deployment status, versions, and health across all customer environments. |
-| 📋 **Deployment flexibility** | Available as both a managed SaaS and a self-hosted solution |
-| 📱 **Dual portal system** | Vendor Portal for complete control and Customer Portal for simplified, white-labeled end-customer access. |
+| 📋 **Deployment flexibility** | Available as both a managed SaaS and a [self-hosted](/docs/self-hosting/getting-started/) solution |
+| 📱 **Dual portal system** | Vendor Portal for complete control and Customer Portal for simplified, [white-labeled](docs/product/branding/) end-customer access. |
 
 ## Who is Distr for?
 
@@ -47,9 +46,9 @@ Distr helps:
 Distr enables you to:
 
 - **Distribute software** to any environment, from cloud to air-gapped
-- **Manage deployments** with visibility across all customer environments
+- **Manage deployments** with visibility across all customer environments and customer controlled deployments
 - **Enforce licensing** down to the application version level, and with tag-based access controls for individual artifacts
-- **Track consumption** and health status of artifacts and applications across your customer base
+- **Track consumption** and health status and the download count of artifacts and applications across your customer base
 - **White-label** the customer experience to align with your brand and onboard end-customers quickly 
 
 ## Where do I start?
