--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -5,8 +5,9 @@ sidebar:
   order: 1
 ---
 
-import {Aside} from '@astrojs/starlight/components';
+import {Aside, Steps} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
+
 
 The Fully Self-Managed deployment model gives security-conscious end-customers complete control over their infrastructure with no third-party agents or access. This registry-centric model serves organizations with restrictive security policies, regulatory requirements, or internal policies prohibiting third-party access.
 
@@ -20,9 +21,20 @@ Distr provides a private artifact registry that enables controlled software dist
   alt="Fully-Self-Managed diagram"
 />
 
+### Implementation steps
+
+<Steps>
+1. **Set Up Your [Registry](/docs/guides/how-to-registry/)**
+2. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)**
+3. **White-label the [Customer portal](/docs/product/branding/)**
+5. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)**
+6. **Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)**
+7. **Customer can [access and pull](/docs/guides/end-customer-registry-view/#registry-quickstart-from-the-customer-portal) your private artifacts**
+</Steps>
+
+
 <Aside type="tip">
   Ideal for customers with robust DevOps capabilities and strict security
-  requirements around third-party access.
+  requirements around third-party tool access.
 </Aside>
 
-[Read the implementation guide →](/docs/guides/implementation/fully-self-managed-deployment-guide)
